<resources>
    <string name="app_name">AnimationAndTransition</string>

    <string name="menu_title_home">Home</string>
    <string name="menu_title_animate_scale">Animate scale</string>
    <string name="menu_title_object_animator">Object Animator</string>
    <string name="menu_title_animator_set">Animator Set</string>
    <string name="menu_title_transition_set">Transition Set</string>

    <string name="button_animate_scale">Animate Scale</string>
    <string name="button_object_animator">Object Animator</string>
    <string name="button_animator_set">Animator Set</string>
    
    
    <string name="lyrics">
Twinkle, twinkle, little star,\n
How I wonder what you are!\n
Up above the world so high,\n
Like a diamond in the sky.\n
\n
When the blazing sun is gone,\n
When he nothing shines upon,\n
Then you show your little light,\n
Twinkle, twinkle, all the night.\n
\n
Then the traveller in the dark\n
Thanks you for your tiny sparks;\n
He could not see which way to go,\n
If you did not twinkle so.\n
\n
In the dark blue sky you keep,\n
And often through my curtains peep,\n
For you never shut your eye\n
\'Till the sun is in the sky.\n
\n
As your bright and tiny spark\n
Lights the traveller in the dark,\n
Though I know not what you are,\n
Twinkle, twinkle, little star.
    </string>
</resources>
