<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/page_home"
            android:title="@string/menu_title_home"
            android:checked="true"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/page_animate_scale"
            android:title="@string/menu_title_animate_scale"/>
        <item
            android:id="@+id/page_object_animator"
            android:title="@string/menu_title_object_animator"/>
        <item
            android:id="@+id/page_animator_set"
            android:title="@string/menu_title_animator_set"/>
        <item
            android:id="@+id/page_transition_set"
            android:title="@string/menu_title_transition_set"/>
    </group>

</menu>